# GeminiForJanitors

./: .editorconfig  .gitattributes  GeminiForJanitors.ipynb  GeminiForJanitors.py  LICENSE.txt  README.md  app.py  globals.py  prefill.txt  pyproject.toml  render.yaml  requirements.txt  test_proxy.py  test_xuiduser.py  think.txt  xuiduser.py
.github/workflows/: python-ci.yml
gfjproxy/: __init__.py  _globals.py  app.py  bandwidth.py  commands.py  cooldown.py  handlers.py  http_client.py  logging.py  models.py  prefill.py  statistics.py  storage.py  utils.py  xuid_secret.py  xuiduser.py
gfjproxy/providers/: __init__.py  cerebras.py  gemini.py  gemini_cli.py  openrouter.py  z_ai.py
gfjproxy/routes/: keyring.py  proxy.py  system.py
gfjproxy/static/: index.css  site.webmanifest
gfjproxy/templates/: health.html  index.html  keyring.html  stats.html
presets/: gigakostyl.txt  minipopka.txt
tests/: test_advsettings.py  test_annoucement.py  test_announcement.py  test_commands.py  test_cooldown.py  test_handlers.py  test_models.py  test_statistics.py  test_utils.py  test_xuiduser.py
