[project]
name = "GeminiForJanitors"
version = "0.1.0"
description = "Google AI Studio Proxy for JanitorAI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "colorama>=0.4.6",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "gevent>=25.9.1",
    "google-genai>=1.64.0",
    "gunicorn>=25.1.0",
    "httpx[brotli,http2,zstd]>=0.28.1",
    "redis>=7.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.2",
]

[tool.pytest]
minversion = "9.0"
addopts = ["--import-mode=importlib"]
pythonpath = ["."]
testpaths = ["tests"]
filterwarnings = [
    "ignore:'_UnionGenericAlias' is deprecated"
]
